--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [SOFTWARE_LIST]
 brave =
 chocolateygui = 
-vscode = "/DontAddToPath"
 git = 
 Cmder = 
 intellijidea-ultimate = 
+PyCharm-community= 
 github-desktop = 
 docker-cli = 
 openjdk17 = 
