Fixxed that is_installed in SoftwareInstaller class would return False even if the program was installed before.

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ chocolateygui =
 git = 
 Cmder = 
 intellijidea-ultimate = 
-PyCharm-community= 
+pycharm-community=
 github-desktop = 
 docker-cli = 
 openjdk17 = 
