Fixxed some types and that output for installation was not printed to sys.stdout anymore.

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [SOFTWARE_LIST]
 ; brave =
-; chocolateygui = 
-; git = 
-; Cmder = 
-; intellijidea-ultimate = 
-; pycharm-community=
-; github-desktop = 
-; docker-cli = 
-; openjdk17 = 
+; chocolateygui =
+; git =
+Cmder =
+; intellijidea-ultimate =
+; pycharm-community =
+; github-desktop =
+; docker-cli =
+; openjdk17 =
 ; winscp =
 ; 7zip =
-tortoisesvn =
+; tortoisesvn =
