Added config parameter for base installation path.

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,16 @@
 [SOFTWARE_LIST]
 ; brave =
 ; chocolateygui =
-; git =
-Cmder =
-; intellijidea-ultimate =
+; git = ;WORKS
+; Cmder = ;WORKS
+intellijidea-ultimate =
 ; pycharm-community =
 ; github-desktop =
 ; docker-cli =
 ; openjdk17 =
-; winscp =
+; winscp = ;WORKS
 ; 7zip =
-; tortoisesvn =
+; tortoisesvn = ;WORKS
+
+[INSTALL]
+path = C:\Software
