Added interpolation to ConfigParser, so that I can use $ symbol to reference variables in ini file.

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,16 @@
+[INSTALL]
+path = C:\Software
+
 [SOFTWARE_LIST]
 ; brave =
 ; chocolateygui =
 ; git = ;WORKS
 ; Cmder = ;WORKS
-intellijidea-ultimate =
-; pycharm-community =
+; intellijidea-ultimate = --skip-virus-check ;WORKS
+; pycharm-community = ;WORKS
 ; github-desktop =
-; docker-cli =
-; openjdk17 =
+; docker-cli = ;WORKS
+openjdk17 = --override-program-files-directories
 ; winscp = ;WORKS
-; 7zip =
+; 7zip = --install-arguments '/D="${INSTALL:path}\7-Zip"' ;WORKS
 ; tortoisesvn = ;WORKS
-
-[INSTALL]
-path = C:\Software
