Added possibility to overwrite ProgramFiles env parameter temporarily for installing.

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ path = C:\Software
 ; pycharm-community = ;WORKS
 ; github-desktop =
 ; docker-cli = ;WORKS
-openjdk17 = --override-program-files-directories
+; openjdk17 = --override-program-files-directories ;WORKS
 ; winscp = ;WORKS
 ; 7zip = --install-arguments '/D="${INSTALL:path}\7-Zip"' ;WORKS
 ; tortoisesvn = ;WORKS
