Fixxed installation of 7zip and chocolateygui.

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ path = C:\Software
 
 [SOFTWARE_LIST]
 ; brave =
-; chocolateygui =
+; chocolateygui = --install-arguments 'INSTALLFOLDER="${INSTALL:path}\chocolateygui"' ;WORKS
 ; git = ;WORKS
 ; Cmder = ;WORKS
 ; intellijidea-ultimate = --skip-virus-check ;WORKS
@@ -12,5 +12,5 @@ path = C:\Software
 ; docker-cli = ;WORKS
 ; openjdk17 = --override-program-files-directories ;WORKS
 ; winscp = ;WORKS
-; 7zip = --install-arguments '/D="${INSTALL:path}\7-Zip"' ;WORKS
+; 7zip = --install-arguments '/D="${INSTALL:path}\7zip"' ;WORKS
 ; tortoisesvn = ;WORKS
