--- a/config.ini
+++ b/config.ini
@@ -14,3 +14,5 @@ path = C:\Software
 ; winscp = ;WORKS
 ; 7zip = --install-arguments '/D="${INSTALL:path}\7zip"' ;WORKS
 ; tortoisesvn = ;WORKS
+; putty.install =
+; mtputty =
