--- a/config.ini
+++ b/config.ini
@@ -14,5 +14,7 @@ path = C:\Software
 ; winscp = ;WORKS
 ; 7zip = --install-arguments '/D="${INSTALL:path}\7zip"' ;WORKS
 ; tortoisesvn = ;WORKS
-; putty.install =
-; mtputty =
+; putty.install = 
+; mtputty = 
+; whatsapp = 
+; notepadplusplus = 
