Configuring git global parameters on startup now.

--- a/config.ini
+++ b/config.ini
@@ -17,4 +17,7 @@ path = C:\Software
 ; putty.install = 
 ; mtputty = 
 ; whatsapp = 
-; notepadplusplus = 
+; notepadplusplus =
+
+[GIT]
+core.sshcommand = C:/Windows/System32/OpenSSH/ssh.exe
