Enabled possibility to use inline comments with pythons configparser.

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ path = C:\Software
 ; brave =
 ; chocolateygui = --install-arguments 'INSTALLFOLDER="${INSTALL:path}\chocolateygui"' ;WORKS
 ; git = ;WORKS
-; Cmder = ;WORKS
+Cmder = ; WORKS
 ; intellijidea-ultimate = --skip-virus-check ;WORKS
 ; pycharm-community = ;WORKS
 ; github-desktop =
