Added more parameters to config file to set by git on startup.

--- a/config.ini
+++ b/config.ini
@@ -20,4 +20,9 @@ Cmder = ; WORKS
 ; notepadplusplus =
 
 [GIT]
+core.editor = nano
 core.sshcommand = C:/Windows/System32/OpenSSH/ssh.exe
+user.name = ErtugrulSener
+user.email = ertugrulsener@hotmail.de
+init.defaultbranch = manster
+
