Added new section 'WINDOWS-SERVICES' to ini file and uncommented out Cmder for now.

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ path = C:\Software
 ; brave =
 ; chocolateygui = --install-arguments 'INSTALLFOLDER="${INSTALL:path}\chocolateygui"' ;WORKS
 ; git = ;WORKS
-Cmder = ; WORKS
+; Cmder = ; WORKS
 ; intellijidea-ultimate = --skip-virus-check ;WORKS
 ; pycharm-community = ;WORKS
 ; github-desktop =
@@ -26,3 +26,5 @@ user.name = ErtugrulSener
 user.email = ertugrulsener@hotmail.de
 init.defaultbranch = manster
 
+[WINDOWS-SERVICES]
+ssh-agent = Started
