Replaced choco dependency with easier to use scoop.

--- a/config.ini
+++ b/config.ini
@@ -2,29 +2,27 @@
 path = C:\Software
 
 [SOFTWARE_LIST]
-; brave =
-; chocolateygui = --install-arguments 'INSTALLFOLDER="${INSTALL:path}\chocolateygui"' ;WORKS
-; git = ;WORKS
-; Cmder = ; WORKS
-; intellijidea-ultimate = --skip-virus-check ;WORKS
-; pycharm-community = ;WORKS
-; github-desktop =
-; docker-cli = ;WORKS
-; openjdk17 = --override-program-files-directories ;WORKS
-; winscp = ;WORKS
-; 7zip = --install-arguments '/D="${INSTALL:path}\7zip"' ;WORKS
-; tortoisesvn = ;WORKS
-; putty.install = 
-; mtputty = 
-; whatsapp = 
-; notepadplusplus =
+brave =
+git = 
+cmder =
+idea-ultimate =
+pycharm = 
+github =
+docker = 
+openjdk17 =
+winscp = 
+7zip =
+tortoisesvn = 
+putty =
+notepadplusplus =
 
 [GIT]
 core.editor = nano
 core.sshcommand = C:/Windows/System32/OpenSSH/ssh.exe
 user.name = ErtugrulSener
 user.email = ertugrulsener@hotmail.de
-init.defaultbranch = manster
+init.defaultbranch = master
+credential.helper = manager-core
 
 [WINDOWS-SERVICES]
 ssh-agent = Started
