Added vscode and docker-compose to the software list.

--- a/config.ini
+++ b/config.ini
@@ -9,12 +9,14 @@ idea-ultimate =
 pycharm = 
 github =
 docker = 
+docker-compose = 
 openjdk17 =
 winscp = 
 7zip =
 tortoisesvn = 
 putty =
 notepadplusplus =
+vscode =
 
 [GIT]
 core.editor = nano
