Added first step for windows services configurator: Starting / Stopping services.

--- a/config.ini
+++ b/config.ini
@@ -27,4 +27,4 @@ init.defaultbranch = master
 credential.helper = manager-core
 
 [WINDOWS-SERVICES]
-ssh-agent = Started
+ssh-agent = --start-type auto --action start
