--- a/config.ini
+++ b/config.ini
@@ -27,4 +27,4 @@ init.defaultbranch = master
 credential.helper = manager-core
 
 [WINDOWS-SERVICES]
-ssh-agent = --start-type auto --action start
+ssh-agent = --start-mode Automatic --action start
