Added maven and mvndaemon to software list.,

--- a/config.ini
+++ b/config.ini
@@ -3,20 +3,22 @@ path = C:\Software
 
 [SOFTWARE_LIST]
 brave =
-git = 
+git =
 cmder =
 idea-ultimate =
-pycharm = 
+pycharm =
 github =
-docker = 
-docker-compose = 
+docker =
+docker-compose =
 openjdk17 =
-winscp = 
+winscp =
 7zip =
-tortoisesvn = 
+tortoisesvn =
 putty =
 notepadplusplus =
 vscode =
+maven =
+mvndaemon =
 
 [GIT]
 core.editor = nano
