Fixed windows services configurator: Start mode not set to Automatic (Wrong start mode name Auto, should be Automatic).

--- a/config.ini
+++ b/config.ini
@@ -30,4 +30,4 @@ init.defaultbranch = master
 credential.helper = manager-core
 
 [WINDOWS-SERVICES]
-ssh-agent = --start-mode Auto --action start
+ssh-agent = --start-mode Automatic --action start
