Seperated additional arguments from other parameters in config.ini for software + Added possibility to install software to context.

--- a/config.ini
+++ b/config.ini
@@ -12,10 +12,10 @@ docker =
 docker-compose =
 openjdk17 =
 winscp =
-7zip =
+7zip = --install-context
 tortoisesvn =
 putty =
-notepadplusplus =
+notepadplusplus = --install-context
 vscode =
 maven =
 mvndaemon =
