Added secret to repo and a way to obtain it (manually enter password for now).

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ install.log
 # Ignore defender-control executables
 external/executables/defender-control/*.exe
 
+# Ignore decrypted secret to not expose anything to the public ;)
+secret_decrypted
