Added run-ad-admin flag to pycharm also.

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ brave =
 git =
 cmder = --run-as-admin
 idea-ultimate =
-pycharm =
+pycharm = --run-as-admin
 github =
 docker-compose =
 openjdk11 =
