Changed software list a bit, adapted to new needs.

--- a/config.ini
+++ b/config.ini
@@ -13,10 +13,10 @@ openjdk11 =
 openjdk17 =
 winscp =
 7zip = --install-context
-tortoisesvn =
+; tortoisesvn =
 putty =
 notepadplusplus = --install-context
-vscode =
+; vscode =
 maven =
 mvndaemon =
 wget =
@@ -25,6 +25,8 @@ grep =
 curl = 
 git-crypt =
 postman = 
+nano = 
+sudo = 
 
 [GIT]
 core.editor = nano
