Added vcredist2013 to software list.

--- a/config.ini
+++ b/config.ini
@@ -22,11 +22,12 @@ mvndaemon =
 wget =
 lightshot =
 grep =
-curl = 
+curl =
 git-crypt =
-postman = 
-nano = 
-sudo = 
+postman =
+nano =
+sudo =
+vcredist2013 =
 
 [GIT]
 core.editor = nano
