Added settings repository cloning, so that the intellij configuration is only one sync away.

--- a/config.ini
+++ b/config.ini
@@ -40,3 +40,6 @@ credential.helper = manager-core
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
+
+[INTELLIJ]
+settings-repository = https://github.com/ErtugrulSener/IntelliJ-Settings.git
