--- a/config.ini
+++ b/config.ini
@@ -40,6 +40,7 @@ credential.helper = manager-core
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
+WinDefend = --start-mode Disable --action stop
 
 [INTELLIJ]
 settings-repository = https://github.com/ErtugrulSener/IntelliJ-Settings.git
