--- a/config.ini
+++ b/config.ini
@@ -40,7 +40,7 @@ credential.helper = manager-core
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
-WinDefend = --start-mode Disabled --action stop
+WinDefend = --start-mode Manual --action stop
 
 [INTELLIJ]
 settings-repository = https://github.com/ErtugrulSener/IntelliJ-Settings.git
