Added file assocation configurator, to automate even more.

--- a/config.ini
+++ b/config.ini
@@ -42,5 +42,39 @@ credential.helper = manager-core
 ssh-agent = --start-mode Automatic --action start
 WinDefend = --start-mode Manual --action stop
 
+[PROG-IDS]
+file_editor = Applications\notepad++.exe
+image_editor = Applications\paintdotnet.exe
+file_archiver = Applications\7zFM.exe
+
+[WINDOWS-FILE-ASSOCIATIONS]
+.txt = ${PROG-IDS:file_editor}
+.log = ${PROG-IDS:file_editor}
+.cfg = ${PROG-IDS:file_editor}
+.ini = ${PROG-IDS:file_editor}
+.js = ${PROG-IDS:file_editor}
+.py = ${PROG-IDS:file_editor}
+.c = ${PROG-IDS:file_editor}
+.cc = ${PROG-IDS:file_editor}
+.cpp = ${PROG-IDS:file_editor}
+.hpp = ${PROG-IDS:file_editor}
+.h = ${PROG-IDS:file_editor}
+.gitignore = ${PROG-IDS:file_editor}
+.gitattributes = ${PROG-IDS:file_editor}
+
+.png = ${PROG-IDS:image_editor}
+.jpeg = ${PROG-IDS:image_editor}
+.jpg = ${PROG-IDS:image_editor}
+.dds = ${PROG-IDS:image_editor}
+.tga = ${PROG-IDS:image_editor}
+
+.zip = ${PROG-IDS:file_archiver}
+.zipx = ${PROG-IDS:file_archiver}
+.7z = ${PROG-IDS:file_archiver}
+.s7z = ${PROG-IDS:file_archiver}
+.rar = ${PROG-IDS:file_archiver}
+.gz = ${PROG-IDS:file_archiver}
+.tar = ${PROG-IDS:file_archiver}
+
 [INTELLIJ]
 settings-repository = https://github.com/ErtugrulSener/IntelliJ-Settings.git
