Added file association registration (Adding registry keys manually) before setting prog id.

--- a/config.ini
+++ b/config.ini
@@ -46,9 +46,9 @@ ssh-agent = --start-mode Automatic --action start
 WinDefend = --start-mode Manual --action stop
 
 [PROG-IDS]
-file_editor = Applications\notepad++.exe
-image_editor = Applications\paintdotnet.exe
-file_archiver = Applications\7zFM.exe
+file_editor = --prog-id Applications\notepad++.exe --command "C:\Software\apps\notepadplusplus\current\notepad++.exe" "%1"
+image_editor = --prog-id Applications\paintdotnet.exe --command "C:\Software\apps\paint.net\current\paintdotnet.exe" "%1"
+file_archiver = --prog-id Applications\7zFM.exe --command "C:\Software\apps\7zip\current\7zFM.exe" "%1"
 
 [WINDOWS-FILE-ASSOCIATIONS]
 .txt = ${PROG-IDS:file_editor}
