--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ isos
 
 # Ignore log files
 install.log
+logs/software_updater_service.log
 
 # Ignore defender-control executables
 external/executables/defender-control/*.exe
