Added file association for xml and json.

--- a/config.ini
+++ b/config.ini
@@ -51,6 +51,8 @@ image_editor = --prog-id Applications\paintdotnet.exe --command "${INSTALL:path}
 file_archiver = --prog-id Applications\7zFM.exe --command "${INSTALL:path}\apps\7zip\current\7zFM.exe" "%1"
 
 [WINDOWS-FILE-ASSOCIATIONS]
+.xml = ${PROG-IDS:file_editor}
+.json = ${PROG-IDS:file_editor}
 .txt = ${PROG-IDS:file_editor}
 .log = ${PROG-IDS:file_editor}
 .cfg = ${PROG-IDS:file_editor}
