Cache power_savings_plan_guid and create a new one and set settings, if "TOP_PERFORMANCE" doesn't exist yet!

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,6 @@ external/executables/defender-control/*.exe
 
 # Ignore decrypted secret to not expose anything to the public ;)
 secret_decrypted
+
+# Ignore local sqlite database
+data.db
