Added aliases for some git commands.

--- a/config.ini
+++ b/config.ini
@@ -40,6 +40,9 @@ user.name = ErtugrulSener
 user.email = ertugrulsener@hotmail.de
 init.defaultbranch = master
 credential.helper = manager-core
+alias.st = "status"
+alias.co = "checkout"
+alias.ci = "commit"
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
