Added "git-filter-repo" to SOFTWARE_LIST and moved git-crypt under git.

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,8 @@ path = C:\Software
 [SOFTWARE_LIST]
 brave =
 git =
+git-crypt =
+git-filter-repo =
 cmder = --run-as-admin
 idea-ultimate =
 pycharm = --run-as-admin
@@ -24,7 +26,6 @@ wget =
 lightshot =
 grep =
 curl =
-git-crypt =
 postman =
 nano =
 sudo =
