Keep all old versions of gradle, do not cleanup after installing.

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ notepadplusplus = --install-context
 ; vscode =
 maven =
 mvndaemon =
-gradle =
+gradle = --keep-all-old-versions
 wget =
 lightshot =
 grep =
