add some useful pre-configurations for git + use main branch as default instead of master

--- a/config.ini
+++ b/config.ini
@@ -39,11 +39,16 @@ core.editor = nano
 core.sshcommand = C:/Windows/System32/OpenSSH/ssh.exe
 user.name = ErtugrulSener
 user.email = ertugrulsener@hotmail.de
-init.defaultbranch = master
-credential.helper = manager-core
-alias.st = "status"
-alias.co = "checkout"
-alias.ci = "commit"
+init.defaultbranch = main
+credential.helper = manager
+push.autoSetupRemote = true
+color.ui = auto
+alias.st = status
+alias.co = checkout
+alias.ci = commit
+alias.reword = commit --amend
+alias.uncommit = reset --soft HEAD~1
+help.autocorrect 3
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
