--- a/config.ini
+++ b/config.ini
@@ -48,7 +48,7 @@ alias.co = checkout
 alias.ci = commit
 alias.reword = commit --amend
 alias.uncommit = reset --soft HEAD~1
-help.autocorrect 3
+help.autocorrect = 3
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
