feat: added opening .gradle files with idea-ultimate

--- a/config.ini
+++ b/config.ini
@@ -58,6 +58,7 @@ WinDefend = --start-mode Manual --action stop
 file_editor = --prog-id Applications\notepad++.exe --command "${INSTALL:path}\apps\notepadplusplus\current\notepad++.exe" "%1"
 image_editor = --prog-id Applications\paintdotnet.exe --command "${INSTALL:path}\apps\paint.net\current\paintdotnet.exe" "%1"
 file_archiver = --prog-id Applications\7zFM.exe --command "${INSTALL:path}\apps\7zip\current\7zFM.exe" "%1"
+intellij_ide = --prog-id Applications\idea64.exe --command "${INSTALL:path}\apps\idea-ultimate\current\IDE\bin\idea64.exe" "%1"
 
 [WINDOWS-FILE-ASSOCIATIONS]
 .xml = ${PROG-IDS:file_editor}
@@ -89,6 +90,8 @@ file_archiver = --prog-id Applications\7zFM.exe --command "${INSTALL:path}\apps\
 .rar = ${PROG-IDS:file_archiver}
 .gz = ${PROG-IDS:file_archiver}
 .tar = ${PROG-IDS:file_archiver}
+
+.gradle = ${PROG-IDS:intellij_ide}
 
 [INTELLIJ]
 settings-repository = https://github.com/ErtugrulSener/IntelliJ-Settings.git
