--- a/config.ini
+++ b/config.ini
@@ -54,6 +54,7 @@ alias.ci = commit
 alias.reword = commit --amend
 alias.uncommit = reset --soft HEAD~1
 help.autocorrect = 30
+core.autocrlf = true
 
 [WINDOWS-SERVICES]
 ssh-agent = --start-mode Automatic --action start
